# coinbase-eas-asp

./: go.mod  go.sum
core/aggregator/: aggregator.go  mock.go  mock_test.go
core/auditor/: auditor.go
pkg/base_eas/: constants.go  parse.go
pkg/change_request/: type.go
pkg/mock/: rand.go
pkg/nmt/: data.go  element.go  errors.go  group.go  hash.go  id.go  layer.go  layer_test.go  node.go  node_test.go  proof.go  rand.go  record.go
pkg/privacy_pool/: event.go  event_test.go
pkg/proof-of-audit/: makefile  sp1.go  sp1_test.go
pkg/proof-of-audit/lib/: libprover.h
pkg/proof-of-audit/lib/elf/: riscv32im-succinct-zkvm-elf
pkg/proof-of-audit/lib/src/lib/src/: lib.rs
pkg/proof-of-audit/lib/src/program/: Cargo.toml
pkg/proof-of-audit/lib/src/program/src/: main.rs
pkg/proof-of-audit/lib/src/prover/: Cargo.toml
pkg/proof-of-audit/lib/src/prover/src/: lib.rs
pkg/quiknode/: payload.go  payload_test.go  testPayload.json
pkg/reportDB/: report.go  reportDB.go
pkg/statedb/: event.go  event_test.go  membership.go  mock.go  record.go  statedb.go
pkg/utils/: bytes.go
