[workspace]
[package]
version = "0.1.0"
name = "prover"
edition = "2021"

[dependencies]
bincode = "1.3.3"
blsful = { version = "=2.4.1" }
libc = "0.2.153"
rand_core = "0.6.4"
serde_json = "1.0.114"
sp1-core = { git = "https://github.com/succinctlabs/sp1.git" }

[lib]
crate-type = ["cdylib", "staticlib", "lib"]
